# book-to-skill

./: README.md  SKILL.md  pyproject.toml  requirements-pinned.txt
book_to_skill/: dependencies.py
scripts/extractor/: utils.py
